# streamly-posix

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  streamly-filesystem.cabal  streamly-posix.cabal
test/: Main.hs
