cabal-version:       >=1.10

name:                streamly-filesytem
version:             0.1.0.0
synopsis:            Beautiful file streaming
-- description:
bug-reports:         https://github.com/hasufell/streamly-filesystem/issues
license:             BSD3
license-file:        LICENSE
author:              Julian Ospald <hasufell@posteo.de>
maintainer:          Julian Ospald <hasufell@posteo.de>
copyright:           Julian Ospald <hasufell@posteo.de> 2020
category:            Streaming
build-type:          Simple
extra-source-files:  CHANGELOG.md

library streamly-filesystem
  if os(linux)
      exposed-modules:   Streamly.External.FileSystem.DirStream.Posix
      build-depends:       hpath-directory     >= 0.13
                         , unix                >= 2.7
  exposed-modules:     Streamly.External.FileSystem.Handle
  -- other-modules:
  -- other-extensions:
  build-depends:         base                >= 4.12 && < 5
                       , bytestring          >= 0.10
                       , safe-exceptions     >= 0.1
                       , streamly            >= 0.7
                       , streamly-bytestring >= 0.1.0.1
                       , word8               >= 0.1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:         -Wall -O2 -fspec-constr-recursive=16 -fmax-worker-args=16

test-suite sf-test
  if os(linux)
      build-depends:       hpath-directory     >= 0.13
                         , unix                >= 2.7
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:         base                >= 4.12 && < 5
                       , bytestring
                       , filepath
                       , hspec
                       , hspec-discover
                       , safe-exceptions     >= 0.1
                       , streamly            >= 0.7
                       , streamly-bytestring >= 0.1.0.1
                       , streamly-filesystem
                       , temporary
                       , word8               >= 0.1.3
  default-language:    Haskell2010
  GHC-Options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/hasufell/streamly-filesystem
